k8s/service-b-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b
  namespace: microservices
spec:
  replicas: 1
  
  selector:
    matchLabels:
      app: service-b
  template:
    metadata:
      labels:
        app: service-b
    spec:
      containers:
      - name: service-b
        image: pratik6958/service-b:latest
        ports:
        - containerPort: 5000
