k8s/service-b-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-b
  namespace: microservices
  labels:
    app: microservice
spec:
  selector:
    app: service-b
  ports:
  - name: http
    port: 80
    targetPort: 5000
